Revision history for MooseX-Daemonize

    - fix incompatibilities with Test::Builder 1.005+ (schwern, RT#76523)
    - add missing dependency on the version of File::Path which added
      make_path (RT#79169, Jonathan Sailor)
    - add missing test dependency on Test::Exception (RT#70382)
    - document the 'basedir' attribute and its behaviour (RT#83055)

0.15 Thurs. May 31, 2012
    - fix versions

0.14 Wed. May 30, 2012
    - recommend Daemon::Control instead
    - fix bug with pidbase dir not being created
      if it doesn't already exist

0.13 Wed. July 6, 2011
    - adding docs related to closing all
      filehandles and the issues that can
      cause with things like Log::Log4Perl
      (thanks to Maik Hentsche via RT #67016)
    - updating copyright dates

0.12 Sun. July 11, 2010
    - release without the .git directory in it

0.11 Sat. July 10, 2010
    * MooseX::Daemonize::Core
      - make the options to daemonize()
        into proper attributes but still
        retained back-compat (Thanks to Magnus Erixzon)
          - adjusted docs and tests

    - removed the pod.t and pod-coverage.t tests

0.10 Sat. April 17, 2010
    - updated copyrights
    - removed the POE test because it was causing
      random failures when installing from CPAN
      and not adding enough value to keep around
    - applied POD corrections from RT #50091
      (thanks to Kostyuk Oleg)

0.09 2009-10-05
	* s/no_plan => 1/'no_plan'/g (Dave Rolsky)
	* Synchronize Version numbers

0.08 Sunday, Sept. 7, 2008
    * t/
      - Removed usage of Cwd in favour of a temporary dir to prevent test fails
        when running in an unwritable dir
      - patch to ensure that t/01.filecreate.t passes (thanks to Jose Luis Rey)

0.07 Saturday, May 24, 2008
    * MooseX::Daemonize
      - Made default pidbase '/var/run' rather
        than './var/run'

    * t/
      - Small fixups to pidfile testing in
        t/31.with_pid_file_and_poe.t

    ~ Removed the Build.PL since Module::Install