@@ -5,6 +5,8 @@ Revision history for MooseX-Daemonize
       make_path (RT#79169, Jonathan Sailor)
     - add missing test dependency on Test::Exception (RT#70382)
     - document the 'basedir' attribute and its behaviour (RT#83055)
+    - add 'documentation' keys for public attributes, to be used when
+      displaying --help (RT#54295)
 
 0.15 Thurs. May 31, 2012
     - fix versions
